# web-shell

./: Cargo.toml  README.md
src/: main.rs  static_server.rs  ws_server.rs
src/lib/: mod.rs  pty.rs  server.rs
static/: index.html
