[package]
name = "web-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.11", features = ["full"] }
hyper-tungstenite = "0.17.0"
futures-util = "0.3"
http-body-util = "0.1.3"
nix = { version = "0.30.1", features = ["term", "process", "fs"]}
